--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,12 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@theme {
+  --font-poppins: var(--font-poppins);
+  --font-inter: var(--font-inter);
+  --font-grotesk: var(--font-grotesk);
+}
+
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
